# Moon-language

./: CMakeLists.txt  README.md
include/: byte_code.h  command.h  executor.h  expression_parse.h  lexer.h  operators.h  parser.h  text_split_by_words.h  token.h
main/: main.cpp
sources/: executor.cpp  expression_parse.cpp  lexer.cpp  operators.cpp  parser.cpp  text_split_by_words.cpp
